# CplusplusCi

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build_release.bat  build_release.sh  generate_qt_osx_project.sh  generate_qt_vs_project.bat  generate_qt_vs_project.sh  init.sh
cmake/: GitCloneOrUpdateExternal.cmake  TranslationUtils.cmake
docs/: bash.md  bugfix.md  cmake.md  git.md  vscode.md
docs/qt/: image.md
git/hooks/: pre-commit
pack/: copyright.txt  package.txt  welcome.txt
pack/doc/: help.html
src/: .clang-format  CMakeLists.txt
src/app/: CMakeLists.txt  app.cc
src/base/: CMakeLists.txt
src/base/cmake/: base.cmake
src/base/include/base/: base.h  base_export.h
src/base/src/: base.cc
src/qt/: CMakeLists.txt
src/qt/qt_base/: CMakeLists.txt
src/qt/qt_base/widgets/: CMakeLists.txt
src/qt/qt_base/widgets/widgets/: CMakeLists.txt
src/qt/qt_base/widgets/widgets/elided_label/: CMakeLists.txt  README.md  elided_label.cpp  elided_label.h  elided_label_app.cpp  elided_label_window.cpp  elided_label_window.h
src/qt/template/: CMakeLists.txt
src/qt/template/app/: CMakeLists.txt  README.md  template_name.cpp  template_name.h  template_name_app.cpp  template_name_window.cpp  template_name_window.h
src/qt/template/tools/qt_app_generator/: README.md  config.js  generator.js  main.js
src/qt_cpp/: CMakeLists.txt  main.cc  qt_cpp_app.qrc  qt_cpp_main_window.cc  qt_cpp_main_window.h
src/qt_cpp/i18n/: qt_cpp_app_zh_CN.ts
src/qt_cpp/tests/: dummy.cc
src/qt_cpp/tests/analog_clock/: analog_clock.cc  analog_clock.h
src/qt_cpp/tests/image_test/: image_test_window.cc  image_test_window.h
src/qt_cpp/tests/scribble/: scribble_area.cc  scribble_area.h  scribble_window.cc  scribble_window.h
src/qt_cpp/tests/webui/: web_view.cc  web_view.h  webui.cc  webui.h  webui_handler.cc  webui_handler.h
src/qt_cpp/win/: .gitignore  app.rc
tools/: CMakeLists.txt
tools/cpplint/: README.md  cpplint.sh  package_cpplint.sh
